# gpublas

./: CMakeLists.txt  README.md
include/: gpublas.h  gpufft.h
src/: gpublas.cxx  gpufft.cxx
tests/: CMakeLists.txt  test_axpy.cxx  test_daxpy.cxx  test_fft.cxx  test_getrfs.cxx  test_scal_copy.cxx
