macro(add_gpublas_test name)
  add_executable(${name})
  target_gtensor_sources(${name} PRIVATE ${name}.cxx)
  target_link_libraries(${name} gtensor::gtensor gpublas GTest::Main)
  target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_DIRECTORY}/include)
  gtest_discover_tests(${name})
  if (GTENSOR_TEST_DEBUG)
    target_compile_definitions(${name} PRIVATE GTENSOR_TEST_DEBUG)
  endif()
endmacro()

macro(add_gpufft_test name)
  add_executable(${name})
  target_gtensor_sources(${name} PRIVATE ${name}.cxx)
  target_link_libraries(${name} gtensor::gtensor gpufft GTest::Main)
  target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_DIRECTORY}/include)
  gtest_discover_tests(${name})
  if (GTENSOR_TEST_DEBUG)
    target_compile_definitions(${name} PRIVATE GTENSOR_TEST_DEBUG)
  endif()
endmacro()

add_gpublas_test(test_axpy)
add_gpublas_test(test_scal_copy)
add_gpublas_test(test_getrfs)

add_gpufft_test(test_fft)
